k3s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example

---
apiVersion: v1
kind: Namespace
metadata:
  name: main
